<resources >
    <string name="app_name">aMule Remote</string>
    <string name="dlqueue_empty">No file in download queue</string>
    <string name="label_filename">File Name:</string>
    <string name="menu_opt_settings">Settings</string>
    <string name="partfile_status_waiting">Waiting</string>
    <string name="partfile_status_paused">Paused</string>
    <string name="partfile_status_downloading">Downloading</string>
    <string name="settings_label_server_host">aMule PC address</string>
    <string name="settings_label_server_port">Port</string>
    <string name="settings_label_server_password">Password</string>
    <string name="settings_label_server">aMule PC(s)</string>
    <string name="partfile_status_allocating">Allocating</string>
    <string name="partfile_status_complete">Complete</string>
    <string name="partfile_status_completing">Completing</string>
    <string name="partfile_status_empty">Empty source list</string>
    <string name="partfile_status_error">Error</string>
    <string name="partfile_status_hashing">Hashing</string>
    <string name="partfile_status_insuffcient">Insufficient disk space</string>
    <string name="partfile_status_unknown">Unknown</string>
    <string name="menu_opt_refresh">Refresh</string>
    <string name="label_sources">Sources: </string>
    <string name="partfile_detail_button_pause">Pause</string>
    <string name="partfile_detail_button_resume">Resume</string>
    <string name="partfile_detail_button_delete">Delete</string>
    <string name="partfile_detail_label_status">Status: </string>
    <string name="menu_opt_reset">Reset connection (troubleshooting)</string>
    <string name="settings_label_client">Client</string>
    <string name="settings_label_client_autorefresh">Autorefresh</string>
    <string name="settings_summary_server_host">The hostname or IP of the PC running aMule daemon</string>
    <string name="settings_summary_server_port">TCP port for EC</string>
    <string name="settings_summary_server_password">Your EC password</string>
    <string name="settings_summary_client_autorefresh">Refresh contents automatically</string>
    <string name="partfile_detail_label_sources_active">active</string>
    <string name="partfile_detail_label_sources_notcurrent">not current</string>
    <string name="partfile_detail_label_sources_a4af">asked for another file</string>
    <string name="partfile_detail_label_sources_available">available</string>
    <string name="partfile_detail_label_sources">Sources</string>
    <string name="partfile_detail_label_remaining">remaining</string>
    <string name="partfile_detail_label_done">Transferred: </string>
    <string name="partfile_detail_label_size">Size: </string>
    <string name="partfile_detail_label_link">ED2K Link</string>
    <string name="menu_detail_opt_a4af_now">Switch A4AF Now</string>
    <string name="menu_detail_opt_a4af_auto">Switch A4AF Auto</string>
    <string name="menu_detail_opt_a4af_away">Move A4AF away</string>
    <string name="menu_opt_added2k">Add ED2K link</string>
    <string name="partfile_prio_low">Low</string>
    <string name="partfile_prio_normal">Normal</string>
    <string name="partfile_prio_high">High</string>
    <string name="partfile_prio_auto_low">Auto [Lo]</string>
    <string name="partfile_prio_auto_normal">Auto [No]</string>
    <string name="partfile_prio_auto_high">Auto [Hi]</string>
    <string name="partfile_prio_unknown">Unknown</string>
    <string name="partfile_detail_label_priority">Priority</string>
    <string name="menu_detail_opt_prio">Change priority</string>
    <string name="partfile_prio_auto">Auto</string>
    <string name="menu_detail_opt_a4af">A4AF</string>
    <string name="menu_opt_sort">Sort by&#8230;</string>
    <string name="menu_opt_sort_filename">Filename</string>
    <string name="menu_opt_sort_status">Status</string>
    <string name="menu_opt_sort_transfered">Transferred</string>
    <string name="menu_opt_sort_progress">Progress</string>
    <string name="menu_opt_sort_size">Size</string>
    <string name="menu_opt_sort_speed">Speed</string>
    <string name="menu_opt_sort_priority">Priority</string>
    <string name="menu_opt_sort_remaining">Remaining time</string>
    <string name="menu_opt_sort_last_seen_complete">Last seen complete</string>
    <string name="settings_label_client_connect_timeout">Connect timeout</string>
    <string name="settings_label_client_read_timeout">Read timeout </string>
    <string name="settings_summary_client_connect_timeout">Up to %d seconds</string>
    <string name="settings_summary_client_read_timeout">Up to %d seconds</string>
    <string name="dlqueue_server_not_queried">Not connected to aMule server</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="partfile_dialog_delete_confirm">Are you sure you want to delete this file?</string>
    <string name="sourcenames_context_rename">Rename</string>
    <string name="menu_detail_opt_rename">Rename</string>
    <string name="settings_label_client_autorefresh_interval">Autorefresh interval</string>
    <string name="partfile_deatil_comments_rating_notrated">Not rated</string>
    <string name="partfile_deatil_comments_rating_invalid">Invalid</string>
    <string name="partfile_deatil_comments_rating_poor">Poor</string>
    <string name="partfile_deatil_comments_rating_fair">Fair</string>
    <string name="partfile_deatil_comments_rating_good">Good</string>
    <string name="partfile_deatil_comments_rating_excellent">Excellent</string>
    <string name="partfile_sourcenames_nosource">No source available</string>
    <string name="partfile_comments_nocomments">No comment available</string>
    <string name="menu_opt_about">About&#8230;</string>
    <string name="label_release_notes">Release notes:</string>
    <string name="label_new_version_available">A new version is available!</string>
    <string name="crash_toast_text">Ooooops! I crashed, but a you can send a report to my developer to help him fix the issue!</string>
	<string name="crash_dialog_title">aMule Remote has crashed</string>
	<string name="crash_dialog_text">An unexpected error occurred forcing the
  application to stop. Please help me fix this by sending me error data,
 all you have to do is click \'OK\'. If this happens frequently, please enable debug logging in the settings menu, so that I will get more information about this issue.</string>
	<string name="crash_dialog_comment_prompt">Please consider adding some details about what were you doing when this crash happened.</string>
	<string name="crash_dialog_ok_toast">Thank you!</string>
	<string name="dialog_added2k_title">Insert ED2K URI</string>
	<string name="dialog_rename_partfile">Insert new file name</string>
	<string name="dialog_ed2k_notify">ED2K URI added</string>
	<string name="menu_opt_refresh_cat">Refresh Categories</string>
	<string name="partfile_detail_label_lastseencomplete">Last Seen Complete:</string>
	<string name="partfile_detail_label_category">Category: </string>
	<string name="menu_opt_send_report">Send Bug Report</string>
	<string name="settings_label_server_version">aMule version</string>
	<string name="settings_summary_server_version">Version of aMule installed on the PC</string>
	<string name="settings_label_debug">Debug</string>
	<string name="settings_label_debug_enable_options">Enable debug options</string>
	<string name="settings_summary_debug_enable_options">Enable additional debugging options in menu</string>
	<string name="settings_label_debug_enable_log">Enable debug logging</string>
	<string name="settings_summary_debug_enable_log">Enable this only if requested by the developer</string>
	<string name="about_dialog_intro">© 2011-2013 by iuk\n
	http://www.iukonline.com/\n
	\n
	This product includes software developed at\n
	ACRA ( http://acra.googlecode.com/ ).\n
	</string>
	<string name="error_unexpected">Wow! Something really unexpected just happened. Please contact amuleremote@iukonline.com if you want to help in avoiding this in the future. In the meanwhile, connection will be reset.</string>
	<string name="error_server">aMule server retuned an error</string>
	<string name="error_client">Error building request</string>
	<string name="error_packet_parsing">Error parsing packet</string>
	<string name="error_host">Cannot resolve server hostname/IP</string>
	<string name="error_timeout">Connection to server timed out</string>
	<string name="error_io">Unexpected end of connection to server</string>
	<string name="dlqueue_dialog_title_no_server_configured">aMule PC not configured</string>
	<string name="dlqueue_dialog_message_no_server_configured">Press OK to go to the settings screen</string>
	<string name="error_null_client">Could not create client. Please check your settings. Select Help from the menu if you need help with settings</string>
	<string name="menu_opt_help">Help</string>
	<string name="search_label_file_name">File name</string>
	<string name="search_label_search_type">Search type</string>
	<string name="search_button_go">Go!</string>
	<string name="search_no_results_yet">No result to show yet…\nKeep refreshing until results show up!</string>
	<string name="menu_opt_search">Search</string>
	<string name="search_label_file_type">File type</string>
	<string name="search_label_extension">Extension</string>
	<string name="search_label_min_size">Min size</string>
	<string name="search_label_max_size">Max size</string>
	<string name="search_label_availability">Availability</string>
	<string name="dialog_add_search_file">Add file %s to download queue?</string>
	<string name="stats_status_not_connected">Not Connected</string>
	<string name="stats_status_firewalled">Firewalled</string>
	<string name="stats_status_connected">Connected</string>
	<string name="stats_status_connecting">Connecting</string>
	<string name="dialog_start_search">aMule do not support multiple concurrent searches from remote GUIs. Starting this search will stop the one currently running. Do you want to continue?</string>
	<string name="search_title">Searches</string>
	<string name="dialog_whats_new_welcome">Welcome to aMule Remote %s!</string>
	<string name="dialog_whats_new_whats_new">What\'s new:</string>
	<string name="dialog_whats_new_features_14">Search feature is finally available (only for aMule 2.3.1)!</string>
	<string name="dialog_whats_new_features_18">Italian localization</string>
	<string name="menu_opt_reset_app_version_info">Reset app version info</string>
	<string name="menu_search_details_opt_sort_sources">Sources</string>
	<string name="menu_search_details_opt_sort_sources_complete">Complete sources</string>
	<string name="menu_search_input_opt_show_advanced_params">Show extended parameters</string>
	<string name="menu_search_input_opt_hide_advanced_params">Hide extended parameters</string>
	<string name="menu_search_input_opt_clear_input_form">Clear search parameters</string>
	<string name="menu_opt_debug">Debug options</string>
	<string name="url_help">http://www.iukonline.com/my-geek-activities/amule-remote/amule-remote-f-a-q/</string>
	<string name="dialog_search_not_available_title">Search not available</string>
	<string name="dialog_search_not_available_message">Sorry, search feature is currently available only for aMule 2.3.1. :-(</string>
	<string name="search_no_results">Search found no matching file.</string>
	<string name="search_no_search">No search executed yet</string>
	<string name="menu_opt_reset_tips">Reset tips</string>
	<string name="settings_label_server_name">aMule PC name</string>
	<string name="settings_summary_server_name">Enter a descriptive name for your aMule PC</string>
	<string name="settings_label_button_add">Add aMule PC</string>
	<string name="settings_summary_client_autorefresh_interval">Every %d seconds</string>
	<string name="menu_detail_opt_delete">Delete</string>
	<string name="menu_detail_opt_category">Change category</string>
</resources>