<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015. Gianluca Vegetti, All Rights Reserved
  ~ Unauthorized copying of this file, via any medium is strictly prohibited
  ~ Proprietary and confidential
  -->

<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings_label_server" android:key="amule_server">
    	<EditTextPreference android:key="amule_server_host" android:title="@string/settings_label_server_host" android:summary="@string/settings_summary_server_host"/>
    	<EditTextPreference android:key="amule_server_port" android:title="@string/settings_label_server_port" android:defaultValue="4712" android:summary="@string/settings_summary_server_port" android:numeric="integer"/>
    	<EditTextPreference android:key="amule_server_password" android:title="@string/settings_label_server_password" android:password="true" android:summary="@string/settings_summary_server_password"/>
    	<ListPreference android:key="amule_server_version" android:title="@string/settings_label_server_version" android:summary="@string/settings_summary_server_version" android:entryValues="@array/settings_server_version_value" android:entries="@array/settings_server_version_description"/>
   	</PreferenceCategory>
    <PreferenceCategory android:key="amule_client" android:title="@string/settings_label_client">
        <CheckBoxPreference android:key="amule_client_autorefresh" android:title="@string/settings_label_client_autorefresh" android:summary="@string/settings_summary_client_autorefresh" android:disableDependentsState="false" android:defaultValue="true"></CheckBoxPreference>
        <EditTextPreference android:key="amule_client_autorefresh_interval" android:dependency="amule_client_autorefresh" android:defaultValue="10" android:shouldDisableView="true" android:summary="@string/settings_summary_client_autorefresh_interval" android:title="@string/settings_label_client_autorefresh_interval"></EditTextPreference>
        <EditTextPreference android:key="amule_client_connect_timeout" android:title="@string/settings_label_client_connect_timeout" android:defaultValue="10" android:summary="@string/settings_summary_client_connect_timeout" android:numeric="integer"/>
        <EditTextPreference android:key="amule_client_read_timeout" android:title="@string/settings_label_client_read_timeout" android:defaultValue="30" android:summary="@string/settings_summary_client_read_timeout" android:numeric="integer"/>
        <CheckBoxPreference android:key="amule_client_convert_pipe" android:title="@string/settings_label_client_convert_pipe" android:summary="@string/settings_summary_client_convert_pipe" android:defaultValue="true" />

        
        
    </PreferenceCategory>
    <PreferenceCategory android:key="debug" android:title="@string/settings_label_debug">
  <!--       <CheckBoxPreference android:key="debug_enable_exceptions" android:title="@string/settings_label_debug_enable_exceptions" android:summary="@string/settings_summary_debug_enable_exceptions" android:enabled="false" android:selectable="false"/> -->
        <CheckBoxPreference android:key="debug_enable_log"        android:title="@string/settings_label_debug_enable_log"        android:summary="@string/settings_summary_debug_enable_log" />
        <CheckBoxPreference android:key="debug_enable_options"    android:title="@string/settings_label_debug_enable_options"    android:summary="@string/settings_summary_debug_enable_options"/>
    </PreferenceCategory>
    
</PreferenceScreen>
