<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item android:id="@+id/menu_opt_search" android:title="@string/menu_opt_search" android:icon="@drawable/ic_menu_search" app:showAsAction="ifRoom" android:orderInCategory="1"></item>
    <item android:id="@+id/menu_opt_added2k" android:title="@string/menu_opt_added2k" android:icon="@drawable/ic_menu_add" app:showAsAction="ifRoom" android:orderInCategory="2"></item>
    <item android:id="@+id/menu_opt_refresh" android:title="@string/menu_opt_refresh" android:icon="@drawable/ic_menu_refresh" app:showAsAction="always" android:orderInCategory="3"></item><item android:id="@+id/menu_opt_settings" android:title="@string/menu_opt_settings" android:icon="@drawable/ic_menu_preferences" android:orderInCategory="4"></item>
    <item android:id="@+id/menu_opt_about" android:title="@string/menu_opt_about" android:orderInCategory="6" android:icon="@drawable/ic_menu_info_details"></item><item android:id="@+id/menu_opt_help" android:title="@string/menu_opt_help" android:orderInCategory="5" android:icon="@drawable/ic_menu_help"></item>
    
    
    
    
    
    <item android:id="@+id/menu_opt_debug" android:title="@string/menu_opt_debug" android:orderInCategory="6" android:visible="false">
        <menu>
		    <item android:id="@+id/menu_opt_reset" android:title="@string/menu_opt_reset" android:icon="@drawable/ic_menu_revert"></item>
		    <item android:id="@+id/menu_opt_send_report" android:title="@string/menu_opt_send_report"></item>
		    <item android:id="@+id/menu_opt_refresh_cat" android:title="@string/menu_opt_refresh_cat"></item>
		    <item android:id="@+id/menu_opt_reset_app_version_info" android:title="@string/menu_opt_reset_app_version_info"></item>
		    <item android:id="@+id/menu_opt_reset_tips" android:title="@string/menu_opt_reset_tips"/>
        </menu>
    </item>
    
    
</menu>
