<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015. Gianluca Vegetti
  ~ 
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~ 
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~ 
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>
  -->

<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:android="http://schemas.android.com/apk/res/android">
  	<item
        android:title="@string/menu_opt_refresh"
        android:id="@+id/menu_detail_opt_refresh"
        android:icon="@drawable/ic_refresh_white_24dp"
        app:showAsAction="always"
        android:orderInCategory="2"/>
    <item
        android:title="@string/menu_detail_opt_delete"
        android:id="@+id/menu_detail_opt_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"/>

    <item android:title="@string/menu_detail_opt_prio"
        android:id="@+id/menu_detail_opt_prio"
        android:orderInCategory="3">
        <menu>
            <item android:title="@string/partfile_prio_auto" android:id="@+id/menu_detail_opt_prio_auto"></item>
            <item android:title="@string/partfile_prio_high" android:id="@+id/menu_detail_opt_prio_high"></item>
            <item android:title="@string/partfile_prio_normal" android:id="@+id/menu_detail_opt_prio_normal"></item>
            <item android:title="@string/partfile_prio_low" android:id="@+id/menu_detail_opt_prio_low"></item>
        </menu>
    </item>
    <item android:id="@+id/menu_detail_opt_a4af" android:title="@string/menu_detail_opt_a4af" android:orderInCategory="5">
        <menu>
            <item android:title="@string/menu_detail_opt_a4af_now" android:id="@+id/menu_detail_opt_a4af_now"></item>
            <item android:title="@string/menu_detail_opt_a4af_auto" android:id="@+id/menu_detail_opt_a4af_auto"></item>
            <item android:title="@string/menu_detail_opt_a4af_away" android:id="@+id/menu_detail_opt_a4af_away"></item>
        </menu>
    </item>
    <item android:id="@+id/menu_detail_opt_rename" android:title="@string/menu_detail_opt_rename" android:orderInCategory="4"></item>
    <item android:id="@+id/menu_detail_opt_category" android:title="@string/menu_detail_opt_category" android:orderInCategory="6"></item>
    
</menu>
