<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015. Gianluca Vegetti
  ~ 
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~ 
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~ 
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>
  -->

<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_opt_sort" android:title="@string/menu_opt_sort" >
        <menu>
            <item android:id="@+id/menu_dlqueue_opt_sort_filename" android:title="@string/menu_opt_sort_filename"></item>
            <item android:id="@+id/menu_dlqueue_opt_sort_status" android:title="@string/menu_opt_sort_status"></item>
            <item android:id="@+id/menu_dlqueue_opt_sort_transfered" android:title="@string/menu_opt_sort_transfered"></item>
            <item android:id="@+id/menu_dlqueue_opt_sort_progress" android:title="@string/menu_opt_sort_progress"></item>
            
            <item android:id="@+id/menu_dlqueue_opt_sort_size" android:title="@string/menu_opt_sort_size"></item>
            <item android:id="@+id/menu_dlqueue_opt_sort_speed" android:title="@string/menu_opt_sort_speed"></item>
            <item android:id="@+id/menu_dlqueue_opt_sort_priority" android:title="@string/menu_opt_sort_priority"></item>
            <item android:id="@+id/menu_dlqueue_opt_sort_remaining" android:title="@string/menu_opt_sort_remaining"></item>
            <item android:id="@+id/menu_dlqueue_opt_sort_last_seen_complete" android:title="@string/menu_opt_sort_last_seen_complete"></item>
            
        </menu>
    </item>
</menu>
