<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015. Gianluca Vegetti
  ~ 
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~ 
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~ 
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>
  -->

<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="placeholder_server_name"
        android:title="@string/settings_label_server_name"
        android:summary="@string/settings_summary_server_name"
        android:singleLine="true"
        />
    <EditTextPreference
        android:key="placeholder_server_host"
        android:title="@string/settings_label_server_host"
        android:summary="@string/settings_summary_server_host"
        android:inputType="textUri"
        />
    <EditTextPreference
        android:key="placeholder_server_port"
        android:title="@string/settings_label_server_port" android:defaultValue="4712"
        android:summary="@string/settings_summary_server_port" android:numeric="integer"
        android:singleLine="true"
        />
    <EditTextPreference
        android:key="placeholder_server_password"
        android:title="@string/settings_label_server_password" android:password="true"
        android:summary="@string/settings_summary_server_password"
        android:singleLine="true"
        />
    <ListPreference
        android:key="placeholder_server_version"
        android:title="@string/settings_label_server_version"
        android:summary="@string/settings_summary_server_version"
        android:entryValues="@array/settings_server_version_value"
        android:entries="@array/settings_server_version_description"
        />
    <Preference
        android:key="server_create"
        android:title="@string/settings_label_button_add"
        android:widgetLayout="@layout/part_settings_server_create"
        />
</PreferenceScreen>
