<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015. Gianluca Vegetti
  ~ 
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~ 
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~ 
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>
  -->

<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings_label_server" android:key="amule_server">
   	</PreferenceCategory>
    <PreferenceCategory android:key="amule_client" android:title="@string/settings_label_client">
        <CheckBoxPreference
            android:key="amule_client_autorefresh"
            android:title="@string/settings_label_client_autorefresh"
            android:summary="@string/settings_summary_client_autorefresh"
            android:disableDependentsState="false"
            android:defaultValue="true"/>
        <EditTextPreference
            android:key="amule_client_autorefresh_interval"
            android:dependency="amule_client_autorefresh"
            android:defaultValue="10"
            android:shouldDisableView="true"
            android:summary="@string/settings_summary_client_autorefresh_interval" android:title="@string/settings_label_client_autorefresh_interval"/>
        <EditTextPreference
            android:key="amule_client_connect_timeout"
            android:title="@string/settings_label_client_connect_timeout"
            android:defaultValue="10"
            android:summary="@string/settings_summary_client_connect_timeout"
            android:numeric="integer"/>
        <EditTextPreference
            android:key="amule_client_read_timeout"
            android:title="@string/settings_label_client_read_timeout"
            android:defaultValue="30"
            android:summary="@string/settings_summary_client_read_timeout"
            android:numeric="integer"/>
    </PreferenceCategory>
<!--    <PreferenceCategory android:key="debug" android:title="@string/settings_label_debug">
        <CheckBoxPreference android:key="debug_enable_log"        android:title="@string/settings_label_debug_enable_log"        android:summary="@string/settings_summary_debug_enable_log" />
        <CheckBoxPreference android:key="debug_enable_options"    android:title="@string/settings_label_debug_enable_options"    android:summary="@string/settings_summary_debug_enable_options"/>
    </PreferenceCategory>-->
    
</PreferenceScreen>
